# rust-protobuf-example

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: TestingCI.yml
src/: main.rs
