[package]
name = "rust-protobuf-example"
version = "1.2.1"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
readme = "README.md"
description = "Working example using Protocol Buffers (protobufs)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
